--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 alert("¡Bienvenido a H4cFl1x!");
                 window.location.href = "hackflix.html"; // Redirección al sitio principal
             } else {
-                alert("Usuario o contraseña incorrectos.");
+                alert("Estas Pero Si Bien Pendejo.");
             }
         }
     </script>
