--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login H4cFl1x</title>
-    <link rel="icon" href="hf.jpg" type="image/png">
+    <link rel="icon" href="hf1.jpg" type="image/png">
     <style>
         body {
             background: url('https://via.placeholder.com/1920x1080') no-repeat center center fixed;
