--- a/index.html
+++ b/index.html
@@ -79,6 +79,17 @@
             }
         }
     </script>
+    <script>
+document.addEventListener("contextmenu", function(event) {
+    event.preventDefault(); // Bloquea el clic derecho
+});
+
+document.addEventListener("keydown", function(event) {
+    if (event.ctrlKey || (event.keyCode >= 112 && event.keyCode <= 123)) {
+        event.preventDefault(); // Bloquea la tecla Ctrl y las teclas F1-F12
+    }
+});
+</script>
 
 </body>
 </html>
