--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
     <script>
 document.addEventListener("contextmenu", function(event) {
     event.preventDefault(); // Bloquea el clic derecho
+    alert("Mandamiento Numero 7");
 });
 
 document.addEventListener("keydown", function(event) {
