--- a/index.html
+++ b/index.html
@@ -82,12 +82,13 @@
     <script>
 document.addEventListener("contextmenu", function(event) {
     event.preventDefault(); // Bloquea el clic derecho
-    alert("Mandamiento Numero 7");
+    alert("No Seas Tan Rata!");
 });
 
 document.addEventListener("keydown", function(event) {
     if (event.ctrlKey || (event.keyCode >= 112 && event.keyCode <= 123)) {
         event.preventDefault(); // Bloquea la tecla Ctrl y las teclas F1-F12
+        alert("No Seas Tan Rata");
     }
 });
 </script>
