--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="hf1.jpg" type="image/png">
     <style>
         body {
-            background: url('https://via.placeholder.com/1920x1080') no-repeat center center fixed;
+            background: url('a.gif') no-repeat center center fixed;
             background-size: cover;
             font-family: Arial, sans-serif;
             display: flex;
