--- a/index.html
+++ b/index.html
@@ -1,97 +1,1 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login H4cFl1x</title>
-    <link rel="icon" href="hf1.jpg" type="image/png">
-    <style>
-        body {
-            background: url('a.gif') no-repeat center center fixed;
-            background-size: cover;
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
-
-        .login-container {
-            background: rgba(0, 0, 0, 0.8);
-            padding: 20px;
-            border-radius: 10px;
-            text-align: center;
-            box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.3);
-        }
-
-        .login-container h2 {
-            color: #fff;
-        }
-
-        input {
-            width: 90%;
-            padding: 10px;
-            margin: 10px 0;
-            border: none;
-            border-radius: 5px;
-        }
-
-        button {
-            background: #28a745;
-            color: white;
-            padding: 10px;
-            width: 100%;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 16px;
-        }
-
-        button:hover {
-            background: #218838;
-        }
-
-    </style>
-</head>
-<body>
-
-    <div class="login-container">
-        <h2>Acceso a H4cFl1x</h2>
-        <input type="text" id="usuario" placeholder="Usuario">
-        <input type="password" id="password" placeholder="Contraseña">
-        <button onclick="validarLogin()">Acceder</button>
-    </div>
-
-    <script>
-        function validarLogin() {
-            let user = document.getElementById("usuario").value;
-            let pass = document.getElementById("password").value;
-
-            let userValido = "VampySecurity"; // Cámbialo por el real
-            let passValido = "RevelionOscura1k."; // Cámbialo por el real
-
-            if (user === userValido && pass === passValido) {
-                alert("¡Bienvenido a H4cFl1x!");
-                window.location.href = "hackflix.html"; // Redirección al sitio principal
-            } else {
-                alert("Estas Pero Si Bien Pendejo.");
-            }
-        }
-    </script>
-    <script>
-document.addEventListener("contextmenu", function(event) {
-    event.preventDefault(); // Bloquea el clic derecho
-    alert("No Seas Tan Rata!");
-});
-
-document.addEventListener("keydown", function(event) {
-    if (event.ctrlKey || (event.keyCode >= 112 && event.keyCode <= 123)) {
-        event.preventDefault(); // Bloquea la tecla Ctrl y las teclas F1-F12
-        alert("No Seas Tan Rata");
-    }
-});
-</script>
-
-</body>
-</html>
+<script language="javascript">document.write(unescape('%3C%21%44%4F%43%54%59%50%45%20%68%74%6D%6C%3E%0A%3C%68%74%6D%6C%20%6C%61%6E%67%3D%22%65%73%22%3E%0A%3C%68%65%61%64%3E%0A%20%20%20%20%3C%6D%65%74%61%20%63%68%61%72%73%65%74%3D%22%55%54%46%2D%38%22%3E%0A%20%20%20%20%3C%6D%65%74%61%20%6E%61%6D%65%3D%22%76%69%65%77%70%6F%72%74%22%20%63%6F%6E%74%65%6E%74%3D%22%77%69%64%74%68%3D%64%65%76%69%63%65%2D%77%69%64%74%68%2C%20%69%6E%69%74%69%61%6C%2D%73%63%61%6C%65%3D%31%2E%30%22%3E%0A%20%20%20%20%3C%74%69%74%6C%65%3E%4C%6F%67%69%6E%20%48%34%63%46%6C%31%78%3C%2F%74%69%74%6C%65%3E%0A%20%20%20%20%3C%6C%69%6E%6B%20%72%65%6C%3D%22%69%63%6F%6E%22%20%68%72%65%66%3D%22%68%66%31%2E%6A%70%67%22%20%74%79%70%65%3D%22%69%6D%61%67%65%2F%70%6E%67%22%3E%0A%20%20%20%20%3C%73%74%79%6C%65%3E%0A%20%20%20%20%20%20%20%20%62%6F%64%79%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%62%61%63%6B%67%72%6F%75%6E%64%3A%20%75%72%6C%28%27%61%2E%67%69%66%27%29%20%6E%6F%2D%72%65%70%65%61%74%20%63%65%6E%74%65%72%20%63%65%6E%74%65%72%20%66%69%78%65%64%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%62%61%63%6B%67%72%6F%75%6E%64%2D%73%69%7A%65%3A%20%63%6F%76%65%72%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%66%6F%6E%74%2D%66%61%6D%69%6C%79%3A%20%41%72%69%61%6C%2C%20%73%61%6E%73%2D%73%65%72%69%66%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%64%69%73%70%6C%61%79%3A%20%66%6C%65%78%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%6A%75%73%74%69%66%79%2D%63%6F%6E%74%65%6E%74%3A%20%63%65%6E%74%65%72%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%61%6C%69%67%6E%2D%69%74%65%6D%73%3A%20%63%65%6E%74%65%72%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%68%65%69%67%68%74%3A%20%31%30%30%76%68%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%6D%61%72%67%69%6E%3A%20%30%3B%0A%20%20%20%20%20%20%20%20%7D%0A%0A%20%20%20%20%20%20%20%20%2E%6C%6F%67%69%6E%2D%63%6F%6E%74%61%69%6E%65%72%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%62%61%63%6B%67%72%6F%75%6E%64%3A%20%72%67%62%61%28%30%2C%20%30%2C%20%30%2C%20%30%2E%38%29%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%70%61%64%64%69%6E%67%3A%20%32%30%70%78%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%62%6F%72%64%65%72%2D%72%61%64%69%75%73%3A%20%31%30%70%78%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%74%65%78%74%2D%61%6C%69%67%6E%3A%20%63%65%6E%74%65%72%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%62%6F%78%2D%73%68%61%64%6F%77%3A%20%30%70%78%20%30%70%78%20%31%30%70%78%20%72%67%62%61%28%32%35%35%2C%20%32%35%35%2C%20%32%35%35%2C%20%30%2E%33%29%3B%0A%20%20%20%20%20%20%20%20%7D%0A%0A%20%20%20%20%20%20%20%20%2E%6C%6F%67%69%6E%2D%63%6F%6E%74%61%69%6E%65%72%20%68%32%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%63%6F%6C%6F%72%3A%20%23%66%66%66%3B%0A%20%20%20%20%20%20%20%20%7D%0A%0A%20%20%20%20%20%20%20%20%69%6E%70%75%74%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%77%69%64%74%68%3A%20%39%30%25%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%70%61%64%64%69%6E%67%3A%20%31%30%70%78%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%6D%61%72%67%69%6E%3A%20%31%30%70%78%20%30%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%62%6F%72%64%65%72%3A%20%6E%6F%6E%65%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%62%6F%72%64%65%72%2D%72%61%64%69%75%73%3A%20%35%70%78%3B%0A%20%20%20%20%20%20%20%20%7D%0A%0A%20%20%20%20%20%20%20%20%62%75%74%74%6F%6E%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%62%61%63%6B%67%72%6F%75%6E%64%3A%20%23%32%38%61%37%34%35%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%63%6F%6C%6F%72%3A%20%77%68%69%74%65%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%70%61%64%64%69%6E%67%3A%20%31%30%70%78%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%77%69%64%74%68%3A%20%31%30%30%25%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%62%6F%72%64%65%72%3A%20%6E%6F%6E%65%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%62%6F%72%64%65%72%2D%72%61%64%69%75%73%3A%20%35%70%78%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%63%75%72%73%6F%72%3A%20%70%6F%69%6E%74%65%72%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%66%6F%6E%74%2D%73%69%7A%65%3A%20%31%36%70%78%3B%0A%20%20%20%20%20%20%20%20%7D%0A%0A%20%20%20%20%20%20%20%20%62%75%74%74%6F%6E%3A%68%6F%76%65%72%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%62%61%63%6B%67%72%6F%75%6E%64%3A%20%23%32%31%38%38%33%38%3B%0A%20%20%20%20%20%20%20%20%7D%0A%0A%20%20%20%20%3C%2F%73%74%79%6C%65%3E%0A%3C%2F%68%65%61%64%3E%0A%3C%62%6F%64%79%3E%0A%0A%20%20%20%20%3C%64%69%76%20%63%6C%61%73%73%3D%22%6C%6F%67%69%6E%2D%63%6F%6E%74%61%69%6E%65%72%22%3E%0A%20%20%20%20%20%20%20%20%3C%68%32%3E%41%63%63%65%73%6F%20%61%20%48%34%63%46%6C%31%78%3C%2F%68%32%3E%0A%20%20%20%20%20%20%20%20%3C%69%6E%70%75%74%20%74%79%70%65%3D%22%74%65%78%74%22%20%69%64%3D%22%75%73%75%61%72%69%6F%22%20%70%6C%61%63%65%68%6F%6C%64%65%72%3D%22%55%73%75%61%72%69%6F%22%3E%0A%20%20%20%20%20%20%20%20%3C%69%6E%70%75%74%20%74%79%70%65%3D%22%70%61%73%73%77%6F%72%64%22%20%69%64%3D%22%70%61%73%73%77%6F%72%64%22%20%70%6C%61%63%65%68%6F%6C%64%65%72%3D%22%43%6F%6E%74%72%61%73%65%F1%61%22%3E%0A%20%20%20%20%20%20%20%20%3C%62%75%74%74%6F%6E%20%6F%6E%63%6C%69%63%6B%3D%22%76%61%6C%69%64%61%72%4C%6F%67%69%6E%28%29%22%3E%41%63%63%65%64%65%72%3C%2F%62%75%74%74%6F%6E%3E%0A%20%20%20%20%3C%2F%64%69%76%3E%0A%0A%20%20%20%20%3C%73%63%72%69%70%74%3E%0A%20%20%20%20%20%20%20%20%66%75%6E%63%74%69%6F%6E%20%76%61%6C%69%64%61%72%4C%6F%67%69%6E%28%29%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%6C%65%74%20%75%73%65%72%20%3D%20%64%6F%63%75%6D%65%6E%74%2E%67%65%74%45%6C%65%6D%65%6E%74%42%79%49%64%28%22%75%73%75%61%72%69%6F%22%29%2E%76%61%6C%75%65%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%6C%65%74%20%70%61%73%73%20%3D%20%64%6F%63%75%6D%65%6E%74%2E%67%65%74%45%6C%65%6D%65%6E%74%42%79%49%64%28%22%70%61%73%73%77%6F%72%64%22%29%2E%76%61%6C%75%65%3B%0A%0A%20%20%20%20%20%20%20%20%20%20%20%20%6C%65%74%20%75%73%65%72%56%61%6C%69%64%6F%20%3D%20%22%56%61%6D%70%79%53%65%63%75%72%69%74%79%22%3B%20%2F%2F%20%43%E1%6D%62%69%61%6C%6F%20%70%6F%72%20%65%6C%20%72%65%61%6C%0A%20%20%20%20%20%20%20%20%20%20%20%20%6C%65%74%20%70%61%73%73%56%61%6C%69%64%6F%20%3D%20%22%52%65%76%65%6C%69%6F%6E%4F%73%63%75%72%61%31%6B%2E%22%3B%20%2F%2F%20%43%E1%6D%62%69%61%6C%6F%20%70%6F%72%20%65%6C%20%72%65%61%6C%0A%0A%20%20%20%20%20%20%20%20%20%20%20%20%69%66%20%28%75%73%65%72%20%3D%3D%3D%20%75%73%65%72%56%61%6C%69%64%6F%20%26%26%20%70%61%73%73%20%3D%3D%3D%20%70%61%73%73%56%61%6C%69%64%6F%29%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%61%6C%65%72%74%28%22%A1%42%69%65%6E%76%65%6E%69%64%6F%20%61%20%48%34%63%46%6C%31%78%21%22%29%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%77%69%6E%64%6F%77%2E%6C%6F%63%61%74%69%6F%6E%2E%68%72%65%66%20%3D%20%22%68%61%63%6B%66%6C%69%78%2E%68%74%6D%6C%22%3B%20%2F%2F%20%52%65%64%69%72%65%63%63%69%F3%6E%20%61%6C%20%73%69%74%69%6F%20%70%72%69%6E%63%69%70%61%6C%0A%20%20%20%20%20%20%20%20%20%20%20%20%7D%20%65%6C%73%65%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%61%6C%65%72%74%28%22%45%73%74%61%73%20%50%65%72%6F%20%53%69%20%42%69%65%6E%20%50%65%6E%64%65%6A%6F%2E%22%29%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%3C%2F%73%63%72%69%70%74%3E%0A%20%20%20%20%3C%73%63%72%69%70%74%3E%0A%64%6F%63%75%6D%65%6E%74%2E%61%64%64%45%76%65%6E%74%4C%69%73%74%65%6E%65%72%28%22%63%6F%6E%74%65%78%74%6D%65%6E%75%22%2C%20%66%75%6E%63%74%69%6F%6E%28%65%76%65%6E%74%29%20%7B%0A%20%20%20%20%65%76%65%6E%74%2E%70%72%65%76%65%6E%74%44%65%66%61%75%6C%74%28%29%3B%20%2F%2F%20%42%6C%6F%71%75%65%61%20%65%6C%20%63%6C%69%63%20%64%65%72%65%63%68%6F%0A%20%20%20%20%61%6C%65%72%74%28%22%4E%6F%20%53%65%61%73%20%54%61%6E%20%52%61%74%61%21%22%29%3B%0A%7D%29%3B%0A%0A%64%6F%63%75%6D%65%6E%74%2E%61%64%64%45%76%65%6E%74%4C%69%73%74%65%6E%65%72%28%22%6B%65%79%64%6F%77%6E%22%2C%20%66%75%6E%63%74%69%6F%6E%28%65%76%65%6E%74%29%20%7B%0A%20%20%20%20%69%66%20%28%65%76%65%6E%74%2E%63%74%72%6C%4B%65%79%20%7C%7C%20%28%65%76%65%6E%74%2E%6B%65%79%43%6F%64%65%20%3E%3D%20%31%31%32%20%26%26%20%65%76%65%6E%74%2E%6B%65%79%43%6F%64%65%20%3C%3D%20%31%32%33%29%29%20%7B%0A%20%20%20%20%20%20%20%20%65%76%65%6E%74%2E%70%72%65%76%65%6E%74%44%65%66%61%75%6C%74%28%29%3B%20%2F%2F%20%42%6C%6F%71%75%65%61%20%6C%61%20%74%65%63%6C%61%20%43%74%72%6C%20%79%20%6C%61%73%20%74%65%63%6C%61%73%20%46%31%2D%46%31%32%0A%20%20%20%20%20%20%20%20%61%6C%65%72%74%28%22%4E%6F%20%53%65%61%73%20%54%61%6E%20%52%61%74%61%22%29%3B%0A%20%20%20%20%7D%0A%7D%29%3B%0A%3C%2F%73%63%72%69%70%74%3E%0A%0A%3C%2F%62%6F%64%79%3E%0A%3C%2F%68%74%6D%6C%3E'))</script>
