--- a/hackflix.html
+++ b/hackflix.html
@@ -69,7 +69,7 @@
     <div class="main-container">
         <div class="video-container">
             <p>Instalacion De Termux</p>
-            <video controls>
+            <video controls style="width: 800px; height: 450px;">
                 <source src="i.mp4" type="video/mp4">
                 Tu navegador no soporta la etiqueta de video.
             </video>
