--- a/hackflix.html
+++ b/hackflix.html
@@ -98,13 +98,13 @@
 <script>
 document.addEventListener("contextmenu", function(event) {
     event.preventDefault(); // Bloquea el clic derecho
-    alert("¿Que Crees Que Haces?");
+    alert("¿Qué Crees Que Haces?");
 });
 
 document.addEventListener("keydown", function(event) {
     if (event.ctrlKey || (event.keyCode >= 112 && event.keyCode <= 123)) {
         event.preventDefault(); // Bloquea la tecla Ctrl y las teclas F1-F12
-        alert("¿Que Crees Que Haces?");
+        alert("¿Qué Crees Que Haces?");
     }
 });
 </script>
