--- a/hackflix.html
+++ b/hackflix.html
@@ -78,7 +78,8 @@
 
         <div class="sidebar">
             <h3>Videos recomendados</h3>
-            <div class="video-item" onclick="cambiarVideo('URL_DEL_VIDEO_1.mp4')">
+            <p>Cuidado con el Osint</p>
+            <div class="video-item" onclick="cambiarVideo('Cuidado con el osint.mp4')">
                 <img src="URL_DEL_THUMBNAIL_1.jpg" alt="Video 1">
                 <span>Video 1</span>
             </div>
