--- a/hackflix.html
+++ b/hackflix.html
@@ -78,10 +78,10 @@
 
         <div class="sidebar">
             <h3>Videos recomendados</h3>
-            <p>Cuidado con el Osint</p>
+            
             <div class="video-item" onclick="cambiarVideo('Cuidado con el osint.mp4')">
-                <img src="URL_DEL_THUMBNAIL_1.jpg" alt="Video 1">
-                <span>Video 1</span>
+                
+                <span>Cuidado con el Osint</span>
             </div>
             <div class="video-item" onclick="cambiarVideo('URL_DEL_VIDEO_2.mp4')">
                 <img src="URL_DEL_THUMBNAIL_2.jpg" alt="Video 2">
