--- a/hackflix.html
+++ b/hackflix.html
@@ -80,9 +80,11 @@
             <h3>Videos recomendados</h3>
             
             <div class="video-item" onclick="cambiarVideo('Cuidado con el osint.mp4')">
-                
-                <span>Cuidado con el Osint</span>
-            </div>
+    <video width="120" muted autoplay loop>
+        <source src="Cuidado con el osint.mp4" type="video/mp4">
+    </video>
+</div>
+
             <div class="video-item" onclick="cambiarVideo('URL_DEL_VIDEO_2.mp4')">
                 <img src="URL_DEL_THUMBNAIL_2.jpg" alt="Video 2">
                 <span>Video 2</span>
