--- a/hackflix.html
+++ b/hackflix.html
@@ -82,12 +82,14 @@
                 <video width="120" muted autoplay loop>
                     <source src="Cuidado con el osint.mp4" type="video/mp4">
                 </video>
+                <p>Cuidado Con El Osint</p>
             </div>
 
             <div class="video-item" onclick="cambiarVideo('URL_DEL_VIDEO_2.mp4')">
                 <video width="120" muted autoplay loop>
                     <source src="Flores Amarillas.mp4" type="video/mp4">
                 </video>
+                <p>Flores Amarillas</p>
             </div>
         </div>
     </div>
