--- a/hackflix.html
+++ b/hackflix.html
@@ -88,8 +88,8 @@
 
             <div class="video-item" onclick="cambiarVideo('URL_DEL_VIDEO_2.mp4')">
                 <video width="120" muted autoplay loop>
-                    <p>Flores Amarillas</p>
-                    <source src="Flores Amarillas.mp4" type="video/mp4">
+                    <p>METAS</p>
+                    <source src="METAS.mp4" type="video/mp4">
                 </video>
                 
             </div>
