--- a/hackflix.html
+++ b/hackflix.html
@@ -88,7 +88,7 @@
             </div>
              <div><p>METAS</p></div>
 
-            <div class="video-item" onclick="cambiarVideo('URL_DEL_VIDEO_2.mp4')">
+            <div class="video-item" onclick="cambiarVideo('METAS.mp4')">
                 <video width="120" muted autoplay loop>
                     <source src="METAS.mp4" type="video/mp4">
                 </video>
