--- a/hackflix.html
+++ b/hackflix.html
@@ -120,6 +120,12 @@
                     <source src="escaneando puertos con nmap mobile en android.mp4" type="video/mp4">
                 </video>
             </div>
+    <div><p>hackathon 2025.mp4</p></div>
+            <div class="video-item" onclick="cambiarVideo('hackathon 2025.mp4')">
+                <video width="120" muted autoplay loop>
+                    <source src="hackathon 2025.mp4" type="video/mp4">
+                </video>
+            </div>
         </div>
     </div>
 
