--- a/hackflix.html
+++ b/hackflix.html
@@ -36,23 +36,25 @@
 
         .video-container {
             flex: 3;
+            position: sticky;
+            top: 10px;
         }
 
         .video-container video {
-            width: 100%;
+            width: 600px;
+            height: 350px;
             border-radius: 8px;
         }
 
         .sidebar {
             flex: 1;
             padding-left: 20px;
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 10px;
         }
 
         .video-item {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin-bottom: 10px;
             cursor: pointer;
         }
 
@@ -72,7 +74,7 @@
     <div class="main-container">
         <div class="video-container">
             <p>Instalación de Termux</p>
-            <video id="videoPrincipal" controls style="width: 800px; height: 450px;">
+            <video id="videoPrincipal" controls autoplay>
                 <source src="i.mp4" type="video/mp4">
                 Tu navegador no soporta la etiqueta de video.
             </video>
@@ -80,56 +82,9 @@
 
         <div class="sidebar">
             <h3>Videos recomendados</h3>
-
-            <div><p>Cuidado Con El Osint</p></div>
-            <div class="video-item" onclick="cambiarVideo('Cuidado con el osint.mp4')">
-                <video width="120" muted autoplay loop>
-                    <source src="Cuidado con el osint.mp4" type="video/mp4">
-                </video>
-            </div>
-
-            <div><p>METAS</p></div>
             <div class="video-item" onclick="cambiarVideo('METAS.mp4')">
-                <video width="120" muted autoplay loop>
+                <video muted autoplay loop>
                     <source src="METAS.mp4" type="video/mp4">
-                </video>
-            </div>
-
-            <div><p>Flores Amarillas</p></div>
-            <div class="video-item" onclick="cambiarVideo('Flores Amarillas.mp4')">
-                <video width="120" muted autoplay loop>
-                    <source src="Flores Amarillas.mp4" type="video/mp4">
-                </video>
-            </div>
-
-            <div><p>Prueba Mesta</p></div>
-            <div class="video-item" onclick="cambiarVideo('Prueba Mesta.mp4')">
-                <video width="120" muted autoplay loop>
-                    <source src="Prueba Mesta.mp4" type="video/mp4">
-                </video>
-            </div>
-            <div><p>Si Soy</p></div>
-            <div class="video-item" onclick="cambiarVideo('Si Soy.mp4')">
-                <video width="120" muted autoplay loop>
-                    <source src="Si Soy.mp4" type="video/mp4">
-                </video>
-            </div>
-        <div><p>escaneando puertos con nmap mobile en android</p></div>
-            <div class="video-item" onclick="cambiarVideo('escaneando puertos con nmap mobile en android.mp4')">
-                <video width="120" muted autoplay loop>
-                    <source src="escaneando puertos con nmap mobile en android.mp4" type="video/mp4">
-                </video>
-            </div>
-    <div><p>hackathon 2025</p></div>
-            <div class="video-item" onclick="cambiarVideo('hackathon 2025.mp4')">
-                <video width="120" muted autoplay loop>
-                    <source src="hackathon 2025.mp4" type="video/mp4">
-                </video>
-            </div>
-     <div><p>Instalación Correcta de Termux</p></div>
-            <div class="video-item" onclick="cambiarVideo('i.mp4')">
-                <video width="120" muted autoplay loop>
-                    <source src="i.mp4" type="video/mp4">
                 </video>
             </div>
         </div>
@@ -138,15 +93,9 @@
     <script>
         function cambiarVideo(nuevaURL) {
             let videoPrincipal = document.getElementById("videoPrincipal");
-            videoPrincipal.src = nuevaURL; 
+            videoPrincipal.src = nuevaURL;  
             videoPrincipal.load();
-
-            document.querySelectorAll(".video-item video").forEach(video => {
-                video.pause();
-                if (video.querySelector("source").src.includes(nuevaURL)) {
-                    video.play();
-                }
-            });
+            videoPrincipal.play();
         }
 
         document.addEventListener("contextmenu", function(event) {
