--- a/hackflix.html
+++ b/hackflix.html
@@ -82,9 +82,16 @@
 
         <div class="sidebar">
             <h3>Videos recomendados</h3>
+            <div>METAS</div>
             <div class="video-item" onclick="cambiarVideo('METAS.mp4')">
                 <video muted autoplay loop>
                     <source src="METAS.mp4" type="video/mp4">
+                </video>
+            </div>
+        <div>Cuidado con el osint</div>
+            <div class="video-item" onclick="cambiarVideo('Cuidado con el osint.mp4')">
+                <video muted autoplay loop>
+                    <source src="Cuidado con el osint.mp4" type="video/mp4">
                 </video>
             </div>
         </div>
