--- a/hackflix.html
+++ b/hackflix.html
@@ -119,7 +119,7 @@
             videoPrincipal.play();
         }
 
-        document.addEventListener("contextmenu", function(event) {
+        //document.addEventListener("contextmenu", function(event) {
             event.preventDefault();
             alert("¿Qué Crees Que Haces?");
         });
